[gd_scene load_steps=13 format=2]

[ext_resource path="res://Laser.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/glowing_circle.png" type="Texture" id=2]

[sub_resource type="CanvasItemMaterial" id=10]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.5, 243.5 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.978261 )
colors = PoolColorArray( 1, 1, 1, 1, 0.976471, 0.976471, 0.976471, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.545455, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.850649, 0.0855856 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 120.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.7
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 300.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.7
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_disable_z = true
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 100.0
scale = 0.1
scale_random = 0.5

[sub_resource type="Environment" id=9]
background_mode = 4
glow_enabled = true
glow_intensity = 0.3
glow_blend_mode = 0
glow_hdr_luminance_cap = 2.0
glow_bicubic_upscale = true

[node name="Laser" type="RayCast2D"]
position = Vector2( 111, 304 )
scale = Vector2( 0.5, 0.5 )
enabled = true
cast_to = Vector2( 1000, 0 )
script = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
material = SubResource( 10 )
points = PoolVector2Array( 0, 0, 0, 0 )
default_color = Color( 0.823529, 0.960784, 1, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 678, 0 )
shape = SubResource( 1 )

[node name="CastingParticle" type="Particles2D" parent="."]
emitting = false
lifetime = 0.3
process_material = SubResource( 6 )
texture = ExtResource( 2 )

[node name="collisionParticle" type="Particles2D" parent="."]
emitting = false
lifetime = 0.3
process_material = SubResource( 7 )
texture = ExtResource( 2 )

[node name="beamParticle" type="Particles2D" parent="."]
emitting = false
amount = 20
lifetime = 0.8
visibility_rect = Rect2( -1, -1, 2, 20 )
local_coords = false
process_material = SubResource( 8 )
texture = ExtResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 9 )
